# rag-based-document-assistant

./: .project  README.md  main.py  pom.xml  pyproject.toml
src/main/java/com/example/rag/: RagDocumentAssistantApplication.java
src/main/java/com/example/rag/config/: AppConfig.java
src/main/java/com/example/rag/controller/: ChatController.java
src/main/java/com/example/rag/service/: DocumentService.java
src/main/resources/static/: index.html
