[project]
name = "rag-based-document-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "pypdf>=6.11.0",
]
